--- a/login.html
+++ b/login.html
@@ -4,10 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Test Git</title>
+  <title>login</title>
 </head>
 <body>
-  <h1>I'm testing git here</h1>
-  <h1>login form</h1>
+  
 </body>
 </html>
